--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 .app {
   height: 100vh;
   color: #000;
-  background-color:aqua
 }
 .content {
   max-width: 1000px;
-  background-color:rgb(163, 136, 136);
   margin: 0 auto;
   padding: 5rem 0 ;
 } 
+.search-panel {
+  margin-top: 1.5rem;
+  padding: 1.5rem;
+    border-radius: 4px;
+    background-color: #fcfaf5;
+    box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.15);
+}
